Reimplement pixel grid with a fragment shader